update abbreviation analysis

--- a/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
+++ b/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warming up PyWSD (takes ~10 secs)... took 4.66923713684082 secs.\n"
+      "Warming up PyWSD (takes ~10 secs)... took 3.9225990772247314 secs.\n"
      ]
     }
    ],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "4ae4ef84",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "id": "e9010b52-4c0b-40f5-9c86-a517e92c0726",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"\"\"A leak was noticed from the pump.\n",
+    "            RCP pump 1A pressure gauge was found not operating.\n",
+    "            RCP pump 1A pressure gauge was found inoperative.\n",
+    "            RCP pump 1A pressure gauge was not functional.\n",
+    "            Rupture of pump bearings caused shaft degradation.\n",
+    "            Rupture of pump bearings caused shaft degradation and consequent flow reduction.\n",
+    "            Pump power supply has been found burnout.\n",
+    "            Pump test failed due to power supply failure.\n",
+    "            Pump inspection revealed excessive impeller degradation.\n",
+    "            Pump inspection revealed excessive impeller degradation likely due to cavitation.\n",
+    "            Oil puddle was found in proximity of RCP pump 1A.\n",
+    "            Anomalous vibrations were observed for RCP pump 1A.\n",
+    "            Several cracks on pump shaft were observed; they could have caused pump failure within few days.\n",
+    "\"\"\"\n",
+    "text = text.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "2c919bef",
    "metadata": {},
    "outputs": [
@@ -54,9 +78,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [Abbreviation, Full]\n",
-      "Index: []\n"
+      "    Abbreviation         Full\n",
+      "553        verif       verify\n",
+      "570       cntrld   controlled\n",
+      "575         cond    condenser\n",
+      "598          pwr        power\n",
+      "599         supp  suppression\n",
+      "602        fdwtr   feed water\n",
+      "605           tk         tank\n"
      ]
     }
    ],
@@ -83,62 +112,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "1832fdf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checker = SpellChecker(checker='mixed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "341233bc-41b1-4336-8130-7486766d674d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pzr [384]\n",
-      "htr [545]\n",
-      "{'pzr': ['pressurizer'], 'htr': ['heater']}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'perform thermography survey of pressurizer heater terminations'"
+       "'a leak was noticed from the pump.\\n            rcp pump 1a pressure gauge was found not operating.\\n            rcp pump 1a pressure gauge was found inoperative.\\n            rcp pump 1a pressure gauge was not functional.\\n            rupture of pump bearings caused shaft degradation.\\n            rupture of pump bearings caused shaft degradation and consequent flow reduction.\\n            pump power supply has been found burnout.\\n            pump test failed due to power supply failure.\\n            pump inspection revealed excessive impeller degradation.\\n            pump inspection revealed excessive impeller degradation likely due to cavitation.\\n            oil puddle was found in proximity of rcp pump 1a.\\n            anomalous vibrations were observed for rcp pump 1a.\\n            several cracks on pump shaft were observed; they could have caused pump failure within few days.\\n'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "checker = SpellChecker(text, checker='mixed')\n",
-    "cleanedText = checker.handleAbbreviations(abbrList, type='mixed')\n",
+    "cleanedText = checker.handleAbbreviations(abbrList, text, type='mixed')\n",
     "cleanedText"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "0c957d4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['pressurizer']"
+       "['rcp']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from Preprocessing import SpellChecker\n",
-    "checker = SpellChecker(cleanedText, checker='autocorrect')\n",
-    "checker.getMisspelledWords()"
+    "checker = SpellChecker(checker='autocorrect')\n",
+    "checker.getMisspelledWords(cleanedText)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "060d6a67",
    "metadata": {},
    "outputs": [
@@ -146,22 +175,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "perform thermography survey of pressurizes heater terminations\n"
+      "a leak was noticed from the pump.\n",
+      "            cp pump 1a pressure gauge was found not operating.\n",
+      "            cp pump 1a pressure gauge was found inoperative.\n",
+      "            cp pump 1a pressure gauge was not functional.\n",
+      "            rupture of pump bearings caused shaft degradation.\n",
+      "            rupture of pump bearings caused shaft degradation and consequent flow reduction.\n",
+      "            pump power supply has been found burnout.\n",
+      "            pump test failed due to power supply failure.\n",
+      "            pump inspection revealed excessive impeller degradation.\n",
+      "            pump inspection revealed excessive impeller degradation likely due to cavitation.\n",
+      "            oil puddle was found in proximity of cp pump 1a.\n",
+      "            anomalous vibrations were observed for cp pump 1a.\n",
+      "            several cracks on pump shaft were observed; they could have caused pump failure within few days.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "cleanedText = checker.correct()\n",
+    "cleanedText = checker.correct(cleanedText)\n",
     "print(cleanedText)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f50a5709",
+   "execution_count": 9,
+   "id": "7c6571a2-5927-4e1b-8d65-5fc7e70290f8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from Preprocessing import AbbrExpander\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "filename = os.path.join(os.getcwd(), '..', 'data', 'abbreviations.xlsx')\n",
+    "AbbrExp = AbbrExpander(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bcef7859-b292-49b2-bf95-c58eeb7d1120",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time eslapse: 4.513034820556641\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "cleanedText = AbbrExp.abbrProcess(text)\n",
+    "et = time.time()\n",
+    "print('Time eslapse:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8d31d850-5328-43f5-9eb8-2c30a6548a91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time eslapse: 5.11410927772522\n"
+     ]
+    }
+   ],
+   "source": [
+    "textList = [t.strip() for t in text.split('\\n')]\n",
+    "newList = []\n",
+    "st = time.time()\n",
+    "for t in textList:\n",
+    "    cleanedT = AbbrExp.abbrProcess(t)\n",
+    "    newList.append(cleanedT)\n",
+    "et = time.time()\n",
+    "print('Time eslapse:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "852b9f03-178c-4664-aabd-9f58af0a7f64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 leak was noticed from the pump. rcp pump 1a pressure gauge was found not operating. rcp pump 1a pressure gauge was found inoperative. rcp pump 1a pressure gauge was not functional. rupture of pump bearings caused shaft degradation. rupture of pump bearings caused shaft degradation and consequent flow reduction. pump power supply has been found burnout. pump test failed due to power supply failure. pump inspection revealed excessive impeller degradation. pump inspection revealed excessive impeller degradation likely due to cavitation. oil puddle was found in proximity of rcp pump 1a. anomalous vibrations were observed for rcp pump 1a. several cracks on pump shaft were observed; they could have caused pump failure within few days. \n",
+      "Time eslapse: 3.4005401134490967\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "cleanedText2 = AbbrExp.abbrProcess(text, splitToList='True')\n",
+    "print(cleanedText2)\n",
+    "et = time.time()\n",
+    "print('Time eslapse:', et-st)"
+   ]
   }
  ],
  "metadata": {
@@ -180,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
