--- a/src/nlp/similarity/test_synset_similarity.ipynb
+++ b/src/nlp/similarity/test_synset_similarity.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b460f1e1-f63d-4199-aa75-513c97e40e1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warming up PyWSD (takes ~10 secs)... took 4.427106142044067 secs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import synsetUtils as SU\n",
@@ -22,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5f7b2b20-b751-4d06-8eb6-8b43aacde955",
    "metadata": {},
    "outputs": [],
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1a168728-3b3b-44d2-88ac-a36618191b90",
    "metadata": {},
    "outputs": [],
@@ -46,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8b828799-15d6-4a1f-9f79-bd00de8328d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.43946127500409304"
+       "0.4391840962925117"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f8a81268-29ea-4ef4-9a36-53088374d54d",
    "metadata": {},
@@ -75,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b349155c-6e69-42c5-bc84-a128ea7d8cb8",
    "metadata": {},
    "outputs": [],
@@ -92,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f4f0367b-c473-42e0-8733-c87b5be4ac94",
    "metadata": {},
    "outputs": [
@@ -102,7 +95,7 @@
        "0.31713942870949496"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +105,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7d868f88-fed9-400d-a2d0-9cf77a811c35",
    "metadata": {},
@@ -121,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1c8b368e-e76b-4f4b-94c7-b1c72a490492",
    "metadata": {},
    "outputs": [
@@ -145,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "71a8acbf-d911-48a6-a971-5e9185cad99e",
    "metadata": {},
    "outputs": [
@@ -166,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "66aee9d8-e0b5-4211-b2d1-c2a7133dd3c7",
    "metadata": {},
    "outputs": [],
@@ -176,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "523fef2d-9490-4595-a9d9-44d7fd9b0a4a",
    "metadata": {},
    "outputs": [
@@ -200,8 +194,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5b04413f-e947-4b8c-a5b8-167bab4192d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=\"ilrt depressurization\"\n",
+    "simUtils.convertSentsToSynsets([a])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "483a344c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ilrt []\n",
+      "depressurization []\n",
+      "two [Synset('two.n.01'), Synset('deuce.n.04'), Synset('two.s.01')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import wordnet as wn\n",
+    "for w in list(t for t in \"ilrt depressurization two\".split()):\n",
+    "    syn = wn.synsets(w)\n",
+    "    print(w, syn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a27562f5",
    "metadata": {},
    "outputs": [],
    "source": []
