improv abbr handler

--- a/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
+++ b/src/nlp/jupyter/abbreviationHandlerDemo.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "a807aa3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warming up PyWSD (takes ~10 secs)... took 3.9225990772247314 secs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, time\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "from Preprocessing import Preprocessing\n",
     "from Preprocessing import SpellChecker\n",
+    "from Preprocessing import AbbrExpander\n",
     "import numpy as np\n",
     "\n",
     "import pandas as pd"
@@ -26,27 +19,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "4ae4ef84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#text = 'Perf ann sens calib of cyl'\n",
-    "#text = 'High conc of hydrogen obs'\n",
-    "#text = 'High conc of hydrogen obs every wk'\n",
-    "#text = 'High conct of hydrogen obs every wk'\n",
-    "#text = 'Perfr chan calib of chan'\n",
-    "#text = \"esf pump room and fuel bldg test\"\n",
-    "#text = 'cal press xmtr sit elev'\n",
-    "text = 'perform thermography survey of pzr htr terminations' \n",
-    "#text = 'plant mods comp iso mode prep (diwo s closed / dcp signoffs / inservice verificiations / restoration) (see rnb)'\n",
+    "test = \"\"\"Perf ann sens calib of cyl.\n",
+    "          High conc of hydrogen obs.\n",
+    "          High conc of hydrogen obs every wk.\n",
+    "          Prfr chann calib of chan.\n",
+    "          esf pump room and fuel bldg test.\n",
+    "          cal press xmtr sit elev.\n",
+    "          perform thermography survey of pzr htr terminations. \n",
+    "          plant mods comp iso mode prep.\n",
+    "          drain & rmv pipe.\"\"\"\n",
     "# pre-processing\n",
-    "text = text.lower()"
+    "test = test.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "e9010b52-4c0b-40f5-9c86-a517e92c0726",
    "metadata": {},
    "outputs": [],
@@ -70,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "2c919bef",
    "metadata": {},
    "outputs": [
@@ -78,128 +71,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Abbreviation         Full\n",
-      "553        verif       verify\n",
-      "570       cntrld   controlled\n",
-      "575         cond    condenser\n",
-      "598          pwr        power\n",
-      "599         supp  suppression\n",
-      "602        fdwtr   feed water\n",
-      "605           tk         tank\n"
+      "Empty DataFrame\n",
+      "Columns: [Abbreviation, Full]\n",
+      "Index: []\n"
      ]
     }
    ],
    "source": [
     "# import abbreviation list\n",
     "abbrList = pd.read_excel('../data/abbreviations.xlsx') \n",
-    "# Make sure the library dopes not contain duplicate rows\n",
+    "# Make sure the library does not contain duplicate rows\n",
     "print(abbrList[abbrList.duplicated()])"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "cfb13856",
-   "metadata": {},
-   "source": [
-    "preprocessorList = ['hyphenated_words',\n",
-    "                    'whitespace',\n",
-    "                    'numerize']\n",
-    "preprocessorOptions = {}\n",
-    "preprocess = Preprocessing(preprocessorList, preprocessorOptions)\n",
-    "post = preprocess(text)\n",
-    "post"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1832fdf6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "checker = SpellChecker(checker='mixed')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "341233bc-41b1-4336-8130-7486766d674d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a leak was noticed from the pump.\\n            rcp pump 1a pressure gauge was found not operating.\\n            rcp pump 1a pressure gauge was found inoperative.\\n            rcp pump 1a pressure gauge was not functional.\\n            rupture of pump bearings caused shaft degradation.\\n            rupture of pump bearings caused shaft degradation and consequent flow reduction.\\n            pump power supply has been found burnout.\\n            pump test failed due to power supply failure.\\n            pump inspection revealed excessive impeller degradation.\\n            pump inspection revealed excessive impeller degradation likely due to cavitation.\\n            oil puddle was found in proximity of rcp pump 1a.\\n            anomalous vibrations were observed for rcp pump 1a.\\n            several cracks on pump shaft were observed; they could have caused pump failure within few days.\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cleanedText = checker.handleAbbreviations(abbrList, text, type='mixed')\n",
-    "cleanedText"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0c957d4c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['rcp']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from Preprocessing import SpellChecker\n",
-    "checker = SpellChecker(checker='autocorrect')\n",
-    "checker.getMisspelledWords(cleanedText)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "060d6a67",
+   "execution_count": 16,
+   "id": "d604dba9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a leak was noticed from the pump.\n",
-      "            cp pump 1a pressure gauge was found not operating.\n",
-      "            cp pump 1a pressure gauge was found inoperative.\n",
-      "            cp pump 1a pressure gauge was not functional.\n",
-      "            rupture of pump bearings caused shaft degradation.\n",
-      "            rupture of pump bearings caused shaft degradation and consequent flow reduction.\n",
-      "            pump power supply has been found burnout.\n",
-      "            pump test failed due to power supply failure.\n",
-      "            pump inspection revealed excessive impeller degradation.\n",
-      "            pump inspection revealed excessive impeller degradation likely due to cavitation.\n",
-      "            oil puddle was found in proximity of cp pump 1a.\n",
-      "            anomalous vibrations were observed for cp pump 1a.\n",
-      "            several cracks on pump shaft were observed; they could have caused pump failure within few days.\n",
-      "\n"
+      "perform annual sensor calibration of cylinder. high concentration of hydrogen observe. high concentration of hydrogen observe every week. perform channel calibration of channel. esf pump room and fuel building test. calibration pressure transmitter sit elevation. perform thermography survey of pressurizer heater terminations. plant modifications composition iso mode preparation. drain & remove pipe. \n"
      ]
     }
    ],
    "source": [
-    "cleanedText = checker.correct(cleanedText)\n",
+    "filename = os.path.join(os.getcwd(), '..', 'data', 'abbreviations.xlsx')\n",
+    "AbbrExp = AbbrExpander(filename)\n",
+    "cleanedText = AbbrExp.abbrProcess(test, splitToList='True')\n",
     "print(cleanedText)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "7c6571a2-5927-4e1b-8d65-5fc7e70290f8",
    "metadata": {},
    "outputs": [],
@@ -214,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "bcef7859-b292-49b2-bf95-c58eeb7d1120",
    "metadata": {},
    "outputs": [
@@ -222,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time eslapse: 4.513034820556641\n"
+      "Time elapse: 1.1707561016082764\n"
      ]
     }
    ],
@@ -230,12 +138,12 @@
     "st = time.time()\n",
     "cleanedText = AbbrExp.abbrProcess(text)\n",
     "et = time.time()\n",
-    "print('Time eslapse:', et-st)"
+    "print('Time elapse:', et-st)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "8d31d850-5328-43f5-9eb8-2c30a6548a91",
    "metadata": {},
    "outputs": [
@@ -243,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time eslapse: 5.11410927772522\n"
+      "Time elapse: 1.271677017211914\n"
      ]
     }
    ],
@@ -255,12 +163,12 @@
     "    cleanedT = AbbrExp.abbrProcess(t)\n",
     "    newList.append(cleanedT)\n",
     "et = time.time()\n",
-    "print('Time eslapse:', et-st)"
+    "print('Time elapse:', et-st)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "852b9f03-178c-4664-aabd-9f58af0a7f64",
    "metadata": {},
    "outputs": [
@@ -269,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "1 leak was noticed from the pump. rcp pump 1a pressure gauge was found not operating. rcp pump 1a pressure gauge was found inoperative. rcp pump 1a pressure gauge was not functional. rupture of pump bearings caused shaft degradation. rupture of pump bearings caused shaft degradation and consequent flow reduction. pump power supply has been found burnout. pump test failed due to power supply failure. pump inspection revealed excessive impeller degradation. pump inspection revealed excessive impeller degradation likely due to cavitation. oil puddle was found in proximity of rcp pump 1a. anomalous vibrations were observed for rcp pump 1a. several cracks on pump shaft were observed; they could have caused pump failure within few days. \n",
-      "Time eslapse: 3.4005401134490967\n"
+      "Time elapse: 1.2550950050354004\n"
      ]
     }
    ],
@@ -278,8 +186,16 @@
     "cleanedText2 = AbbrExp.abbrProcess(text, splitToList='True')\n",
     "print(cleanedText2)\n",
     "et = time.time()\n",
-    "print('Time eslapse:', et-st)"
+    "print('Time elapse:', et-st)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0eaa28cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -298,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
